# oxid

./: .gitignore  README.rst  pyproject.toml  read_magic.py
ochrescope/: data.py  main.py  models.py  viz.py
ochrescope/standards/goethite/: Goethite STD2_HYST_shapecorrected.txt
ochrescope/standards/hematite/: Synthesized Hematite_HYST_shapecorrected.txt
ochrescope/standards/magnetite/: Magnetite Standard_HYST_shapecorrected.txt
oxid/: cli_wrapper.py  data.py  features.py  main.py  models.py  read_magic.py  streamlit_app.py  viz.py
