[tool.poetry]
name = "ochrescope"
version = "0.1.0"
description = "A python package that takes magenetic data from samples of Ochre to predict the type of iron oxide present"
authors = ["Robert Turnbull <robert.turnbull@unimelb.edu.au>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
pymc = "^5.18.0"
typer = "^0.13.0"
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
ochrescope = "ochrescope.main:app"